# O-Process

./: .gitignore  .ralphrc  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  compound-engineering.local.md  pyproject.toml  server.json
.dev/: BUGS.md  CURRENT.md  PROGRESS.md  TESTS.md  translation-cache.json
docs/delivery/: DELIVERY-zh.md  DELIVERY.md
docs/demos/: demo-01-manufacturing-delivery-optimization.md  demo-02-hr-digital-transformation.md  demo-03-legal-cross-border-ma.md  demo-04-soe-equity-due-diligence.md
docs/oprocess-framework/: framework-en.json  framework-zh.json  framework.json  genome_library.json  interference_graph.json  kpis.json  outcome_graph.json  roles.json  schema.json  sources_mapping.json
docs/plans/: 2026-02-23-feat-mcp-certification-upgrade-plan.md  2026-02-23-feat-oprocess-framework-construction-plan.md  2026-02-23-feat-p0-mcp-certification-implementation-plan.md  2026-02-23-feat-p1-mcp-certification-enhancements-plan.md  2026-02-23-feat-p2-mcp-certification-competitive-plan.md  2026-02-23-feat-phase6-quality-gates-benchmarks-plan.md  2026-02-23-fix-audit-schema-alignment-plan.md  2026-02-23-fix-prd-compliance-gap-plan.md  2026-02-23-fix-provenance-chain-rewrite-plan.md  2026-02-23-fix-semantic-search-integration-plan.md  2026-02-24-fix-p5-5-to-p5-7-docstrings-config-healthcheck-plan.md  2026-02-24-fix-p5-commit3-todo-cleanup-plan.md  2026-02-24-fix-p5-mcp-compliance-robustness-plan.md  2026-02-24-fix-p6-3-mcp-prompts-logging-plan.md  2026-02-24-fix-p6-mcp-spec-2025-11-25-audit-plan.md  2026-02-24-fix-p7-should-may-polish-plan.md  2026-02-25-docs-mcp-server-delivery-documentation-plan.md  2026-02-25-feat-report-export-tool-plan.md
docs/reviews/: 2026-02-25-code-quality-review.md
docs_wiki/: 01_PM_Perspective_Business_Logic.md  02_Architect_Perspective_System_Design.md  03_Developer_Perspective_Code_Guide.md
scripts/: add_ai_processes.py  embed.py  export_languages.py  ingest.py  merge_itil.py  merge_scor.py  parse_metrics.py  parse_pcf.py  run_pipeline.py  translate.py  translate_api.py  validate.py
scripts/scanner/: __init__.py  cli.py  models.py  processor.py  schema.py
scripts/shared/: __init__.py  io.py  text.py  types.py
specs/: 01-translation-quality.md  README.md
src/oprocess/: __init__.py  __main__.py  auth.py  config.py  gateway.py  prompts.py  server.py  validators.py
src/oprocess/db/: __init__.py  connection.py  embedder.py  queries.py  row_utils.py  vector_search.py
src/oprocess/governance/: __init__.py  audit.py  boundary.py  provenance.py
src/oprocess/resources/: __init__.py
src/oprocess/tools/: __init__.py  _docx_builder.py  _docx_cover.py  _docx_xml.py  _types.py  export.py  helpers.py  legal_report_export.py  rate_limit.py  registry.py  resources.py  search.py  serialization.py
tests/: conftest.py  test_integration.py  test_performance.py  test_quality_gates.py
tests/fixtures/: annotated_queries.json  boundary_queries.json
tests/test_governance/: test_audit.py  test_auth.py  test_boundary.py  test_provenance.py
tests/test_scanner/: __init__.py  conftest.py  test_cli.py  test_models.py  test_processor.py  test_schema.py
tests/test_tools/: test_embedder.py  test_kpi_role.py  test_legal_report_export.py  test_prompts.py  test_queries.py  test_rate_limit.py  test_registry_tools.py  test_resources.py  test_search_integration.py  test_server.py  test_types.py  test_vector_search.py
todos/: 001-complete-p1-gitignore-apqc-excel.md  002-complete-p1-validate-parent-id-integrity.md  003-complete-p1-validate-kpi-process-id-integrity.md  004-complete-p1-bilingual-warn-vs-schema-fail.md  005-complete-p2-remove-dead-code.md  006-complete-p2-translate-regex-word-boundary.md  007-complete-p2-unused-depth-param.md  008-complete-p2-type-annotations.md  009-complete-p2-bare-exception-catch.md  010-pending-p3-sources-mapping-yagni.md  010-wontfix-p3-sources-mapping-yagni.md  011-complete-p3-precompile-regex.md  011-pending-p3-precompile-regex.md
